--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "day-6",
-  "version": "1.0.0",
-  "description": "",
-  "main": "day6",
-  "dependencies": {
-    "express": "^4.17.1",
-    "moment": "^2.24.0",
-    "mongoose": "^5.7.11",
-    "nodemon": "^1.19.4"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node day6.js",
-    "dev": "nodemon day6.js"
-  },
-  "author": "Adi",
-  "license": "ISC"
+    "name": "day-7",
+    "version": "1.0.0",
+    "description": "",
+    "main": "day7",
+    "dependencies": {
+        "express": "^4.17.1",
+        "moment": "^2.24.0",
+        "mongoose": "^5.7.11",
+        "nodemon": "^1.19.4"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node apotek.js",
+        "dev": "nodemon apotek.js"
+    },
+    "author": "trie168",
+    "license": "ISC"
 }
